# tebex-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SKILL.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
src/: auth.ts  config.ts  index.ts
src/tebex/: client.ts
src/tebex_mcp/: __init__.py  __main__.py  auth.py  client.py  config.py  context.py  logging.py  normalize.py  server.py
src/tebex_mcp/tools/: __init__.py  _common.py  bans.py  command_queue.py  community_goals.py  coupons.py  gift_cards.py  information.py  packages.py  payments.py  players.py  recurring_payments.py  sales.py
src/tools/: bans.ts  command-queue.ts  community-goals.ts  context.ts  coupons.ts  gift-cards.ts  information.ts  packages.ts  payments.ts  players.ts  register.ts  sales.ts
